--- a/examples/connection-helper/index.html
+++ b/examples/connection-helper/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Layouts - HTML5 SDK for Brass Monkey</title>
+  <title>Connection Helper - HTML5 SDK for Brass Monkey</title>
   <link rel="stylesheet" type="text/css" href="../../shared/styles/shared.css">  
 </head>
 <body>
@@ -20,23 +20,23 @@
   </div>
   <div class="cookie-crumbs-wrapper">
     <div class="cookie-crumbs">
-      <span><a href="../../../">Developer SDKs</a></span> > <span><a href="../../">HTML5</a></span> > <span>Basics Example</span>
+      <span><a href="../../../">Developer SDKs</a></span> > <span><a href="../../">HTML5</a></span> > <span>Connection Helper Example</span>
     </div>
   </div>
   <div class="content">
     <div class="sub-header">
       <a href="../../"><img src="../../shared/images/return-examples.png"></a>
       <img class="logo" src="../../shared/images/html5-icon.png"/>
-      <h1>Layouts</h1>
+      <h1>Connection Helper</h1>
       <h2>Example from the HTML5 SDK.</h2>
       
     </div>
     <img class="separator" src="../../shared/images/separator.png"/>
     <div class="demo">
-      <iframe src="layouts.html"></iframe>
+      <iframe src="connection-helper.html"></iframe>
       <h1>Description</h1>
-      <p>We demonstrate laying out background images and buttons in this example.</p>
-      <a class="download" href="layouts.html">Raw HTML (View Source).<img src="../../shared/images/download-icon.png"/></a>
+      <p>We demonstrate building an interactive helper for new users to setup Brass Monkey.</p>
+      <a class="download" href="connection-helper.html">Raw HTML (View Source).<img src="../../shared/images/download-icon.png"/></a>
     </div>
     <img class="separator" src="../../shared/images/separator.png"/>
   </div>
