Modified to pass loadable path via flashvars

--- a/examples/connectionhelper/connectionhelper.html
+++ b/examples/connectionhelper/connectionhelper.html
@@ -32,7 +32,7 @@
       }
     });
     
-    connectionHelper.init("../../swf/connectionhelper/bin/Preloader.swf","ConnectionHelper");
+    connectionHelper.init( "../../swf/connectionhelper/bin/Preloader.swf", "ConnectionHelper", undefined, { 'connection-helper-path': '../../swf/connectionhelper/bin/connectionhelper.swf' });
     connectionHelper.show();
     
     bm.onDeviceAvailable(function(a){     
